--- a/style.css
+++ b/style.css
@@ -176,6 +176,7 @@ a {
 }
 
 .nav__menu {
+  color: var(--secondary);
   background-color: transparent;
   border: none;
   outline: none;
@@ -206,7 +207,8 @@ a {
 }
 
 .menu {
-  background-color: white;
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px);
   height: 100%;
   width: 100%;
   transform: translateX(100%);
@@ -227,13 +229,15 @@ a {
   border-radius: 4px;
   border: none;
   cursor: pointer;
-  background-color: white;
+  background-color: transparent;
   font-size: 14px;
   transition: 200ms ease;
+  color: var(--secondary);
 }
 
 .menu__close:hover {
-  background-color: #f3f4f6;
+  color: var(--primary);
+  background-color: var(--secondary);
 }
 
 .menu__links {
@@ -243,6 +247,7 @@ a {
 }
 
 .menu__link {
+  color: var(--secondary);
   width: 100%;
   padding: 12px 8px;
   border-radius: 4px;
@@ -252,14 +257,15 @@ a {
 }
 
 .menu__link:not(:last-child):hover {
-  background-color: #f3f4f6;
+  background-color: var(--secondary);
+  color: var(--primary);
 }
 
 .menu__link__button {
   width: 100%;
   height: 48px;
-  color: white;
-  background-color: var(--primary);
+  color: var(--primary);
+  background-color: var(--secondary);
   border: 1px transparent solid;
   font-size: 18px;
   font-weight: 300;
@@ -268,9 +274,9 @@ a {
 }
 
 .menu__link__button:hover {
-  background-color: white;
-  border-color: var(--primary);
-  color: var(--primary);
+  background-color: transparent;
+  border-color: var(--secondary);
+  color: var(--secondary);
 }
 
 /* Home */
